--- a/static/footer/footer.css
+++ b/static/footer/footer.css
@@ -54,7 +54,7 @@
   font-weight: normal;
   font-size: 13px;
 }
-@media (max-width: 1150px) {
+@media screen and (max-width: 1150px) {
   .footer .contacts {
     flex-direction: column;
   }
@@ -62,12 +62,15 @@
     margin: 10px 0 0 0;
   }
 }
-@media (max-width: 495px) {
+@media screen and (max-width: 495px) {
   .footer .contacts {
     font-size: 13px;
   }
   .contact {
     flex-direction: column;
+    margin: 0;
+  }
+  .footer .contact .icon {
     margin: 0;
   }
 }
