--- a/static/main/main.css
+++ b/static/main/main.css
@@ -1,4 +1,78 @@
-.main-page {
-  height: 50vh;
-  background-color: rgba(0, 0, 255, 0.384);
+.main_page {
+  width: 1100px;
+  margin: 0 auto;
+}
+.main_page__title {
+  font-size: 30px;
+  margin: 0;
+  font-family: "Montserrat", sans-serif;
+}
+.main_page__subtitle {
+  margin: 0;
+
+  font-family: "Montserrat", sans-serif;
+  font-size: 20px;
+  color: #ff4d00;
+}
+.main_page__cars {
+  height: 100%;
+  width: 100%;
+  margin: 63px 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+
+  gap: 63px 150px;
+}
+.car_card {
+  height: 272px;
+  width: 465px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-direction: column;
+  background-color: #f7f7f7;
+  position: relative;
+}
+.car_card__name {
+  margin: 33px 0 0 0;
+  font-size: 25px;
+  font-family: "Merriweather", serif;
+}
+.car_card__center {
+  width: 100%;
+  height: 180px;
+  display: flex;
+  justify-content: space-around;
+}
+.car_card__image {
+  object-fit: cover;
+}
+.car_card__specifications {
+  width: 135px;
+  height: 86px;
+  font-size: 12px;
+  font-weight: bold;
+  font-family: "Raleway", sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-around;
+  margin: 25px 0;
+}
+.car_card__specification {
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+.car_card__specification_icon {
+  margin: 0 13px;
+}
+.car_card__price {
+  color: #818181;
+  font-size: 15px;
+  font-family: "Raleway", sans-serif;
+  position: absolute;
+  bottom: 27px;
 }
