--- a/static/main/main.css
+++ b/static/main/main.css
@@ -2,19 +2,7 @@
   width: 1100px;
   margin: 0 auto;
 }
-.main_page__title {
-  font-size: 30px;
-  margin: 0;
-  font-family: "Montserrat", sans-serif;
-}
-.main_page__subtitle {
-  margin: 0;
-
-  font-family: "Montserrat", sans-serif;
-  font-size: 20px;
-  color: #ff4d00;
-}
-.main_page__cars {
+.cars_container {
   height: 100%;
   width: 100%;
   margin: 63px 0;
@@ -75,4 +63,19 @@
   font-family: "Raleway", sans-serif;
   position: absolute;
   bottom: 27px;
+  left: 42px;
+}
+@media screen and (max-width: 1100px) {
+  .main_page {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 660px) {
+  .car_card {
+    width: 100%;
+  }
+  .car_card__image {
+    height: 110px;
+  }
 }
