--- a/static/style.css
+++ b/static/style.css
@@ -10,3 +10,15 @@ body {
   width: 100%;
   height: 100%;
 }
+
+.page_title {
+  font-size: 30px;
+  margin: 0;
+  font-family: "Montserrat", sans-serif;
+}
+.page_subtitle {
+  margin: 0;
+  font-family: "Montserrat", sans-serif;
+  font-size: 20px;
+  color: #ff4d00;
+}
