--- a/static/main/main.css
+++ b/static/main/main.css
@@ -22,7 +22,7 @@
   flex-direction: column;
   background-color: #f7f7f7;
   position: relative;
-  box-shadow: 4px 4px 4px #FF4D00;
+  box-shadow: 4px 4px 4px #ff4d00;
 }
 .car_card__name {
   margin: 33px 0 0 0;
@@ -66,17 +66,18 @@
   bottom: 27px;
   left: 42px;
 }
-.car-link{
+.car-link {
   margin: 30px auto;
   font-size: 15px;
   line-height: 18px;
   text-align: center;
-  padding: 15px 0 0;
   color: #000000;
-  border: 3px solid #FF4D00;
-  box-sizing: border-box;
+  border: 3px solid #ff4d00;
   width: 276px;
   height: 56px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 @media screen and (max-width: 1100px) {
   .main_page {
@@ -92,44 +93,36 @@
     height: 110px;
   }
 }
-.about-us .content{
+
+.about-us {
+  font-family: "Raleway", sans-serif;
+}
+.about-us .content {
   margin: 20px;
 }
-.about-us .big-img{
+.about-us .big-img {
   width: 100%;
   object-fit: fill;
 }
-.about-us .title{
-  font-weight: bold;
-  font-size: 30px;
-  line-height: 30px;
 
-}
-.about-us .subtitle{
-  margin-top: -10px;
-  font-size: 20px;
-  line-height: 20px;
-  
-  color: #FF4D00;
-}
-.rental{
+.rental {
   font-size: 18px;
   line-height: 20px;
   font-weight: 400;
 }
-.car-title{
-  font-weight: bold;  
+.car-title {
+  font-weight: bold;
   font-size: 20px;
   line-height: 28px;
 }
-.car-model{
+.car-model {
   font-weight: 500;
   font-size: 15px;
   text-align: right;
-  
+
   color: #818181;
 }
-.adventages{
+.adventages {
   margin: 0 auto;
   width: 900px;
   height: 300px;
@@ -137,13 +130,13 @@
   display: flex;
   flex-wrap: wrap;
 }
-.adventage{
+.adventage {
   margin: 10px 0;
   display: flex;
   align-items: center;
   width: 450px;
 }
-.adventage .text{
+.adventage .text {
   margin: 0 0 0 20px;
   font-weight: bold;
   font-size: 20px;
