--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,7 @@
 @import url("./header/header.css");
 
 @import url("./main/main.css");
+@import url("./car/car.css");
 
 @import url("./footer/footer.css");
 
